Se añadio nuevo item a los terminos y condiciones

--- a/src/pages/terminos.astro
+++ b/src/pages/terminos.astro
@@ -103,6 +103,15 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </p>
       </div>
       <div>
+        <p><strong>Suplencia por Ausencia de Maestro:</strong></p>
+        <p>
+          En caso de ausencia de maestro por motivos de fuerza mayor, la
+          suplencia la hará un maestro de nivel similar o mayor. Esta medida
+          asegura la continuidad en la calidad de la enseñanza para nuestros
+          alumnos, incluso en circunstancias imprevistas.
+        </p>
+      </div>
+      <div>
         <p class="font-bold">
           Al inscribirse en la Academia de Ajedrez Caminos, los alumnos y sus
           tutores legales aceptan y se comprometen a cumplir con estos términos
