Modificacion en parrafo sobre pagos, seccion precios

--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -66,17 +66,11 @@ import PriceCard from "./PriceCard.astro";
     />
   </div>
   <p class="text-center mt-8">
-    Todos los precios son en $USD. Si eres residente de Argentina puedes
-    consultar por tarifas especiales.
+    Todos los precios son en $USD. Para la gestión de los pagos nuestro equipo
+    se pondrá en contacto.
+  </p>
+  <p class="text-center mt-2">
+    Aceptamos pagos a traves de MercadoPago o Paypal, segun corresponda en cada
+    caso.
   </p>
 </section>
-
-<!-- Paypal Client Script -->
-
-<!-- Paypal Script: Básico -->
-
-<!-- Paypal Script: Intermedio -->
-
-<!-- Paypal Script: Premium -->
-
-<!-- Paypal Script: Diganóstico Deportivo -->
