improved little details in pricing section

--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -65,11 +65,11 @@ import PriceCard from "./PriceCard.astro";
       ]}
     />
   </div>
-  <p class="text-center mt-8">
+  <p class="text-small sm:text-base text-center mt-8 text-slate-700">
     Todos los precios son en $USD. Para la gestión de los pagos nuestro equipo
     se pondrá en contacto.
   </p>
-  <p class="text-center mt-2">
+  <p class="text-small sm:text-base text-center mt-2 text-slate-700">
     Aceptamos pagos a traves de MercadoPago o Paypal, segun corresponda en cada
     caso.
   </p>
