Modificados y actualizados los formularios de inscripcion

--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -20,7 +20,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Básico"
       price={40}
-      formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
+      formLink="https://forms.gle/RZX3fmT2BA6LYaFp8"
       characteristics={[
         "Ocho clases grupales por mes",
         "Participación en eventos online de la academia",
@@ -31,7 +31,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Intermedio"
       price={100}
-      formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
+      formLink="https://forms.gle/RZX3fmT2BA6LYaFp8"
       characteristics={[
         "Ocho clases grupales por mes",
         "Dos clases privadas por mes",
@@ -43,7 +43,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Premium"
       price={200}
-      formLink="https://docs.google.com/forms/d/e/1FAIpQLScm8sOz7h8JtHYKTdiDSbVFGquW_CIzSW0zbG-60pyGuubEmQ/viewform?usp=sf_link"
+      formLink="https://forms.gle/RZX3fmT2BA6LYaFp8"
       characteristics={[
         "Ocho clases grupales por mes",
         "Cuatro clases privadas por mes",
@@ -56,7 +56,7 @@ import PriceCard from "./PriceCard.astro";
     <PriceCard
       title="Diagnostico Deportivo"
       price={100}
-      formLink="https://docs.google.com/forms/d/e/1FAIpQLSceohiDsdGEbAxo-3MnN1OldRE9G7EpKxN6GVRzIoeWvshyYw/viewform?usp=sf_link"
+      formLink="https://forms.gle/692M75bHVSjkdUWK8"
       timeSpectrum="c.u."
       characteristics={[
         "Análisis completo y diseño del perfil ajedrecístico",
