Se agregó una nueva seccion para anuncios y se realizaron algunos mantenimientos

--- a/src/components/PathsSection.astro
+++ b/src/components/PathsSection.astro
@@ -1,6 +1,5 @@
 ---
-import PathImg from "../assets/img/journal-pointer.svg";
-import PathImg2 from "../assets/img/journal-tourist-with-map.svg";
+import PathImg from "../assets/img/journal-tourist-with-map.svg";
 import { PathsTabs } from "./react/PathsTabs.jsx";
 ---
 
@@ -21,7 +20,7 @@ import { PathsTabs } from "./react/PathsTabs.jsx";
       <div class="max-w-[200px] md:absolute hidden md:block w-1/3">
         <img
           class="block object-cover"
-          src={PathImg2.src}
+          src={PathImg.src}
           alt="Cartel con diferentes destinos"
         />
       </div>
