--- a/src/components/DiscoverSection.astro
+++ b/src/components/DiscoverSection.astro
@@ -1,5 +1,5 @@
 ---
-import { Button, Link } from "@nextui-org/react";
+import { Link } from "@nextui-org/react";
 import GiftImg from "../assets/img/giveaway.svg";
 ---
 
@@ -33,6 +33,7 @@ import GiftImg from "../assets/img/giveaway.svg";
   <Link
     className="self-center flex items-center justify-center px-5 py-3 text-base font-medium leading-6 text-white transition duration-150 ease-in-out bg-[#ff8c00c2] border border-transparent rounded-md hover:bg-[#ff8c00e8] active:bg-[#ff8c00c2] focus:outline-none focus:shadow-outline "
     href="/free-course/"
+    client:load
   >
     Comenzar Curso Gratuito
   </Link>
