Site under maintenance

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,9 @@ const carrouselImages = await Astro.glob(
 
 <BaseLayout title="Inicio">
   <main>
-    <HeroSection carrouselImages={carrouselImages} client:visible />
+site under maintenance
+<!--    
+<HeroSection carrouselImages={carrouselImages} client:visible />
     <ImportantAnouncementSection />
     <OurGoalSection />
     <DiscoverSection />
@@ -23,5 +25,6 @@ const carrouselImages = await Astro.glob(
     <PricingSection />
     <TestimonialsSection client:visible />
     <FAQsSection />
+-->
   </main>
 </BaseLayout>
