--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -30,9 +30,12 @@ const { title } = Astro.props;
   </head>
 
   <body>
+site under maintenance
+<!-- 
     <MainNavigation client:load />
     <slot />
     <Footer />
     <WhatsAppButton />
+-->
   </body>
 </html>
